namespace PCConfigurator.Model.Components
{
    public abstract class Component
    {
        public string Model { get; set; }
    }
}
